# Order-Intake-Agent

./: .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Glacis-Order-Intake.md  Makefile  Presentation-Content.md  README.md  data_email_birch_valley_clarify_reply.eml.json  data_email_mm_machine_reorder_2026-04-24.eml.json  firebase.json  pyproject.toml
.claude/: settings.json  settings.local.json
adk_apps/order_intake/: __init__.py
backend/: __init__.py  exceptions.py  server.py
backend/audit/: __init__.py  logger.py  models.py
backend/data/: __init__.py  firestore_client.py  firestore_repo.py
backend/gmail/: __init__.py  adapter.py  client.py  history.py  poller.py  pubsub_worker.py  scopes.py  watch.py
backend/ingestion/: __init__.py  email_envelope.py  eml_parser.py
backend/models/: __init__.py  clarify_email.py  classified_document.py  confirmation_email.py  error_context.py  exception_record.py  ground_truth.py  judge_verdict.py  master_records.py  order_record.py  parsed_document.py  run_summary.py  validation_result.py
backend/my_agent/: README.md  __init__.py  agent.py
backend/persistence/: __init__.py  base.py  coordinator.py  exceptions_store.py  orders_store.py  sync_state_store.py
backend/prompts/: __init__.py  clarify_email.py  confirmation_email.py  document_classifier.py  document_parser.py  judge.py  summary.py
backend/tools/: __init__.py
backend/utils/: __init__.py  exceptions.py  logging.py
data/: README.md
data/csv/: ohio_valley_reorder_2026-04-08.body.txt  ohio_valley_reorder_2026-04-08.csv  ohio_valley_reorder_2026-04-08.expected.json  ohio_valley_reorder_2026-04-08.wrapper.eml  patterson_adhoc_reorder.body.txt  patterson_adhoc_reorder.csv  patterson_adhoc_reorder.expected.json  patterson_adhoc_reorder.wrapper.eml
data/edi/: glfp_850_GRR_202604211002.body.txt  glfp_850_GRR_202604211002.edi  glfp_850_GRR_202604211002.expected.json  glfp_850_GRR_202604211002.wrapper.eml  patterson_850_CLE_202604191435.body.txt  patterson_850_CLE_202604191435.edi  patterson_850_CLE_202604191435.expected.json  (+1 more)
data/masters/: customers.json  (+1 more)
firebase/: firestore.indexes.json  firestore.rules
frontend/: .gitignore  package-lock.json  package.json
hackathon-deck/: brand-spec.md  index.html
research/: ADK-Pre-Filter-Patterns.md  Firebase-Init-Decisions.md  Order-Intake-ConfirmStage-Plan.md  Order-Intake-Sprint-Decisions.md  Order-Intake-Sprint-Overview.md  Order-Intake-Sprint-Status.md  Order-Intake-Sprint-Theory-vs-Practice.md  Order-Intake-Sprint-Verification.md  Order-Intake-Sprint-Worktrees.md  Track-A-Live-Audit-2026-04-22.md  Track-A-Live-Smoke-Summary-2026-04-22.md
scripts/: backfill_inbound_email.py  capture_run.py  classify_file.py  classify_folder.py  emit_ground_truth.py  gmail_auth_init.py  gmail_poll.py  gmail_pubsub_worker.py  gmail_watch_setup.py  inject_email.py  load_master_data.py  parse_data.py  parse_file.py  renew_watch.py  scaffold_wrapper_eml.py  smoke_run.py  verify_corpus.py
tests/: conftest.py
(+241 files in other folders)
