[project]
name = "order-intake-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.31.0",
    "google-cloud-firestore>=2.27.0",
    "llama-cloud>=2.1",
    "openpyxl>=3.1.5",
    "pydantic>=2",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "rich>=15.0.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit the live LlamaExtract API (requires LLAMA_CLOUD_API_KEY)",
]
